emulation: Fix Tab not to alter the background color

https://bugzilla.gnome.org/show_bug.cgi?id=764330